MacViews Passwords bubble: Don't put the password label into the focus chain.

There's an unnecessary call to SetFocusBehavior on a views::Label.

Except on Mac, View::SetFocusBehavior(ACCESSIBLE_ONLY) only has meaning
inside a views::AccessiblePaneView. On Mac, it puts a view into the focus
chain when "Full Keyboard Access" is set in System Preferences. Screen
readers and a11y tools always traverse the full tree.

Bug: 782185
Change-Id: I90402a05d3811c14704004d99d14f67c831fc648
Reviewed-on: https://chromium-review.googlesource.com/760077
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515384}
Former-commit-id: 4def1d7b841aa15a452930b95ce1df0e1080e875